# SomatigoX

./: README.md  pyproject.toml
config/: logging.yaml
src/app/: __init__.py  logging_config.py  main.py
src/app/core/: mongo_connector.py  tokenizer.py
src/app/models/: brain_mapper.py
tests/: test_tokenizer.py
